--- a/.github/workflow/ci-cd.yaml
+++ b/.github/workflow/ci-cd.yaml
@@ -1,33 +1,65 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline for Laravel on DigitalOcean Kubernetes
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
+
+env:
+  DOCKER_IMAGE: manav108/minor
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_TOKEN }}
-    
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: your-registry/species-recognition:latest
-    
-    - name: Deploy to Kubernetes
-      uses: steebchen/kubectl@v2
-      with:
-        config: ${{ secrets.KUBE_CONFIG_DATA }}
-        command: apply -f k8s/
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t $DOCKER_IMAGE:${{ github.sha }} ./healthmate
+          docker push $DOCKER_IMAGE:${{ github.sha }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Checkout code (to access k8s folder)
+        uses: actions/checkout@v3
+
+      - name: Set up Kubernetes
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'latest'
+
+      - name: Create .kube directory
+        run: |
+            mkdir -p $HOME/.kube  # Create the .kube directory if it doesn't exist
+
+      - name: Configure DigitalOcean Kubeconfig
+        run: |
+          echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
+
+      - name: Delete existing deployment (if any)
+        run: |
+          kubectl delete deployment healthmate-app --ignore-not-found
+  
+      - name: Update Docker image in deployment YAML
+        run: |
+          sed -i "s|image: ${DOCKER_IMAGE}:.*|image: ${DOCKER_IMAGE}:${{ github.sha }}|g" ./k8s/deployment.yml
+  
+      - name: Deploy to Kubernetes
+        run: |
+          kubectl apply -f ./k8s/  # Apply the updated Kubernetes configuration
+          kubectl rollout status deployment/healthmate-app --timeout=60s
+  
+      - name: Verify the deployment status
+        run: |
+          kubectl get pods
+          kubectl get deployments
