--- a/k8s/Deployment.yaml
+++ b/k8s/Deployment.yaml
@@ -1,33 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: species-recognition
+  name: minor-app
+  labels:
+    app: minor
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: species-recognition
+      app: minor
   template:
     metadata:
       labels:
-        app: species-recognition
+        app: minor
     spec:
       containers:
-      - name: species-recognition
-        image: your-registry/species-recognition:latest
-        ports:
-        - containerPort: 8501
-        resources:
-          requests:
-            memory: "2Gi"
-            cpu: "500m"
-          limits:
-            memory: "4Gi"
-            cpu: "1000m"
-        volumeMounts:
-        - name: model-storage
-          mountPath: /app/models
-      volumes:
-      - name: model-storage
-        persistentVolumeClaim:
-          claimName: model-pvc
+        - name: minor
+          image: manav108/minor:latest
+          ports:
+            - containerPort: 8501
