--- a/k8s/Service.yaml
+++ b/k8s/Service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: species-recognition-service
+  name: minor-service
 spec:
   type: LoadBalancer
   ports:
-  - port: 80
-    targetPort: 8501
+    - port: 80
+      targetPort: 8501
+      protocol: TCP
   selector:
-    app: species-recognition
+    app: minor
