--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,65 +1,45 @@
-name: CI/CD Pipeline for Laravel on DigitalOcean Kubernetes
+name: Deploy to EC2 via Docker
 
 on:
   push:
     branches:
-      - main
-
-env:
-  DOCKER_IMAGE: manav108/minor
+      - main  # Deploy only when changes are pushed to the main branch
 
 jobs:
-  build-and-push:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Log in Docker Hub
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Extract GitHub commit hash
+        id: vars
+        run: echo "GITHUB_SHA=${GITHUB_SHA::8}" >> $GITHUB_ENV
+
       - name: Build and push Docker image
         run: |
-          docker build -t $DOCKER_IMAGE:${{ github.sha }} .
-          docker push $DOCKER_IMAGE:${{ github.sha }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    steps:
-      - name: Checkout code (to access k8s folder)
-        uses: actions/checkout@v3
-
-      - name: Set up Kubernetes
-        uses: azure/setup-kubectl@v3
+      - name: SSH into EC2 and deploy container
+        uses: appleboy/ssh-action@v0.1.12
         with:
-          version: 'latest'
-
-      - name: Create .kube directory
-        run: |
-            mkdir -p $HOME/.kube  # Create the .kube directory if it doesn't exist
-
-      - name: Configure DigitalOcean Kubeconfig
-        run: |
-          echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
-
-      - name: Delete existing deployment (if any)
-        run: |
-          kubectl delete deployment minor-app --ignore-not-found
-  
-      - name: Update Docker image in deployment YAML
-        run: |
-          sed -i "s|image: ${DOCKER_IMAGE}:.*|image: ${DOCKER_IMAGE}:${{ github.sha }}|g" ./k8s/Deployment.yml
-  
-      - name: Deploy to Kubernetes
-        run: |
-          kubectl apply -f ./k8s/  # Apply the updated Kubernetes configuration
-          kubectl rollout status deployment/minor-app --timeout=60s
-  
-      - name: Verify the deployment status
-        run: |
-          kubectl get pods
-          kubectl get deployments
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
+          script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
+            docker stop minor || true
+            docker rm minor || true
+            docker run -d --name minor -p 80:80 ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
