--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -3,36 +3,30 @@ name: Deploy to EC2 via Docker
 on:
   push:
     branches:
-      - main  # Deploy only when changes are pushed to the main branch
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - uses: docker/setup-buildx-action@v2
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract GitHub commit hash
-        id: vars
+      - id: vars
         run: echo "GITHUB_SHA=${GITHUB_SHA::8}" >> $GITHUB_ENV
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
+      - run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }} .
+        docker push ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
 
-      - name: SSH into EC2 and deploy container
-        uses: appleboy/ssh-action@v0.1.12
+      - uses: leangen/action-ssh@v0.11.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
