--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
+          sudo docker build -t ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }} .
+          sudo docker push ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
 
       - name: SSH into EC2 and deploy container
         uses: appleboy/ssh-action@master
@@ -39,7 +39,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
-            docker stop minor || true
-            docker rm minor || true
-            docker run -d --name minor -p 80:80 ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
+            sudo docker stop minor || true
+            sudo docker rm minor || true
+            sudo docker run -d --name minor -p 80:80 ${{ secrets.DOCKER_USERNAME }}/minor:${{ env.GITHUB_SHA }}
